--- a/_site.yml
+++ b/_site.yml
@@ -4,8 +4,8 @@ output_dir: "."
 navbar:
   title: "Ejemplo WEB"
   left:
-  - text: "Paper"
-    href: "1-Entrega-CsaFINAL.hmtl"
+  - text: "Movilidad social en Chile."
+    href: 1-Entrega-CsaFINAL.hmtl
   right:
   - icon: fa-envelope fa-lg
     href: carlos.arriagada@ug.uchile.cl
