--- a/_site.yml
+++ b/_site.yml
@@ -5,7 +5,7 @@ navbar:
   title: "Ejemplo WEB"
   left:
   - text: "Movilidad social en Chile."
-    href: 1-Entrega-CsaFINAL.hmtl
+    href: 1-Entrega-CsaFINAL.Rmd
   right:
   - icon: fa-envelope fa-lg
     href: carlos.arriagada@ug.uchile.cl
