--- a/_site.yml
+++ b/_site.yml
@@ -5,10 +5,10 @@ navbar:
   title: "Ejemplo WEB"
   left:
   - text: "Movilidad social en Chile."
-    href: 1-Entrega-CsaFINAL.Rmd
+    href: 1-Entrega-CsaFINAL.hmtl
   right:
   - icon: fa-envelope fa-lg
-    href: carlos.arriagada@ug.uchile.cl
+    href: catalina.vidal@ug.uchile.cl
   - icon: fa-github fa-lg
     href: https://catalinavl.github.io/TrabajoCSA/
 output:
