elminación tema elegido en github

--- a/_site.yml
+++ b/_site.yml
@@ -13,5 +13,6 @@ navbar:
     href: https://github.com/CatalinaVL/TrabajoCSA
 output:
   html_document:
+    theme: cerulean 
     css: 'styles.css'
 ---
